# streming-output

./: pyproject.toml
app/: main.py
